--- a/silver_product/views/silver_onu_profile_views.xml
+++ b/silver_product/views/silver_onu_profile_views.xml
@@ -7,7 +7,7 @@
             <field name="arch" type="xml">
                 <tree string="ONU Profiles">
                     <field name="name"/>
-                    <field name="hardware_model_ids" widget="many2many_tags"/>
+                    <field name="product_ids" widget="many2many_tags"/>
                     <field name="firmware_version"/>
                     <field name="provisioning_status"/>
                 </tree>
@@ -26,7 +26,7 @@
                                 <field name="description"/>
                                 <field name="firmware_version"/>
                                 <field name="provisioning_status"/>
-                                 <field name="hardware_model_ids" widget="many2many_tags"/>
+                                 <field name="product_ids" widget="many2many_tags"/>
 
                             </group>
                             <group string="Configuration">
