--- a/silver_product/views/silver_ap_views.xml
+++ b/silver_product/views/silver_ap_views.xml
@@ -17,7 +17,7 @@
                         <field name="brand_logo" widget="image" class="ms-2" style="width: 24px; height: 24px;" invisible="not brand_id"/>
                     </div>
 
-                    <field name="hardware_model_id"/>
+                    <!--field name="hardware_model_id"/-->
                     <!--field name="software_version"/>
                     <field name="firmware_version"/-->
                     <!--field name="serial_number"/-->
