--- a/silver_product/views/silver_olt_views.xml
+++ b/silver_product/views/silver_olt_views.xml
@@ -26,7 +26,7 @@
                     </div>
 
 
-                    <field name="hardware_model_id"/>
+                    <!--field name="hardware_model_id"/-->
 
                     <!--field name="software_version"/>
                     <field name="firmware_version"/-->
