--- a/silver_product/views/silver_radius_views.xml
+++ b/silver_product/views/silver_radius_views.xml
@@ -17,7 +17,7 @@
 
 
 
-                    <field name="hardware_model_id"/>
+                    <!--field name="hardware_model_id"/-->
 
                     <!--field name="software_version"/>
                     <field name="firmware_version"/-->
