--- a/silver_provisioning/views/silver_contract_views.xml
+++ b/silver_provisioning/views/silver_contract_views.xml
@@ -64,7 +64,7 @@
                                         />
                                     <field name="has_olt" invisible="1"/>
                                         <field name="olt_id" readonly="state_service == 'active'"
-domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
+domain="[('node_id', '=', node_id), ('core_ids', 'in', core_id)]"
                                               options="{'no_create': True}"/>
 
                                         <button name="action_open_onu_selector_wizard"
@@ -152,7 +152,7 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 
 
 
-                    <field name="hardware_model_id"/>
+                    <!--field name="hardware_model_id"/-->
              <field name="profile_id"  readonly="state_service == 'active'" invisible="(not has_olt)"/>
                     <!--field name="software_version"/>
                     <field name="firmware_version"/-->
@@ -350,7 +350,7 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 
 
 
-                    <field name="hardware_model_id"/>
+                    <!--field name="hardware_model_id"/-->
          <field name="profile_id"  readonly="state_service == 'active'"/>
                     <!--field name="software_version"/>
                     <field name="firmware_version"/-->
