--- a/silver_network/views/silver_box_views.xml
+++ b/silver_network/views/silver_box_views.xml
@@ -18,9 +18,10 @@
             <search string="Cajas NAP">
                 <field name="name"/>
                 <field name="node_id" />
-                <group expand="1" string="Group By">
-                    <filter name="group_by_node_id" string="Nodo" domain="[]"  context="{'group_by':'node_id'}"/>
-                </group>
+                <filter name="group_by_node_id"
+                    string="Nodo"
+                    context="{'group_by':'node_id'}"
+                    />
             </search>
         </field>
     </record>
