--- a/silver_product/views/product_view.xml
+++ b/silver_product/views/product_view.xml
@@ -27,19 +27,19 @@
                               <group>
                                   <!--field name="tracking"/>
                                   <field name="type"/-->
-                    <field name="detailed_type"/>
-                                <field name="uom_id"  invisible="detailed_type=='service'"/>
-                                <field name="etype" invisible="detailed_type=='service'"/>
-                                  <label for="product_brand_id" invisible="detailed_type=='service'"/>
-                    <div class="o_row d-flex align-items-center" invisible="detailed_type=='service'">
+                    <field name="type"/>
+                                <field name="uom_id"  invisible="type=='service'"/>
+                                <field name="etype" invisible="type=='service'"/>
+                                  <label for="product_brand_id" invisible="type=='service'"/>
+                    <div class="o_row d-flex align-items-center" invisible="type=='service'">
                         <field name="product_brand_id"  nolabel="1"/>
                         <field name="product_brand_logo" widget="image" class="ms-2" style="width: 24px; height: 24px;" invisible="not product_brand_id"/>
                     </div>
                                 <field name="hardware_model_id"
                                        context="{'default_etype':etype, 'default_brand_id':product_brand_id}"
                                        domain="[('etype','=',etype),('brand_id','=',product_brand_id)]"
-                                       invisible="detailed_type=='service'" options="{'no_create_edit': False, 'no_quick_create': True}"/>
-<!--field name="service_type_id" invisible="detailed_type!='service'" /-->
+                                       invisible="type=='service'" options="{'no_create_edit': False, 'no_quick_create': True}"/>
+<!--field name="service_type_id" invisible="type!='service'" /-->
 
                             </group>
 
@@ -52,11 +52,11 @@
                         </group>
                     </page>
                 </xpath>
-                                <xpath expr="//field[@name='detailed_type']" position="after">
+                                <xpath expr="//field[@name='type']" position="after">
                                     <field name="is_internet" invisible="1"/>
                     <field name="service_type_id"
                            options="{'no_create_edit': True, 'no_quick_create': True}"
-                           invisible="detailed_type!='service'" required="detailed_type=='service'"/>
+                           invisible="type!='service'" required="type=='service'"/>
                 </xpath>
 
 
@@ -81,18 +81,18 @@
                             <group>
                                                                   <!--field name="tracking"/>
                                   <field name="type"/-->
-                    <field name="detailed_type"/>
-                                <field name="uom_id"  invisible="detailed_type=='service'"/>
-                                <field name="etype" invisible="detailed_type=='service'"/>
-                                  <label for="product_brand_id" invisible="detailed_type=='service'"/>
-                    <div class="o_row d-flex align-items-center" invisible="detailed_type=='service'">
+                    <field name="type"/>
+                                <field name="uom_id"  invisible="type=='service'"/>
+                                <field name="etype" invisible="type=='service'"/>
+                                  <label for="product_brand_id" invisible="type=='service'"/>
+                    <div class="o_row d-flex align-items-center" invisible="type=='service'">
                         <field name="product_brand_id"  nolabel="1"/>
                         <field name="product_brand_logo" widget="image" class="ms-2" style="width: 24px; height: 24px;" invisible="not product_brand_id"/>
                     </div>
                                 <field name="hardware_model_id"
                                        context="{'default_etype':etype}"
                                        domain="[('etype','=',etype)]"
-                                       invisible="detailed_type=='service'" options="{'no_create_edit': False, 'no_quick_create': True}"/>
+                                       invisible="type=='service'" options="{'no_create_edit': False, 'no_quick_create': True}"/>
 
                             </group>
 
@@ -114,11 +114,11 @@
                 </xpath>
 
 
-                                <xpath expr="//field[@name='detailed_type']" position="after">
+                                <xpath expr="//field[@name='type']" position="after">
                                     <field name="is_internet" invisible="1"/>
                     <field name="service_type_id"
                            options="{'no_create_edit': True, 'no_quick_create': True}"
-                           invisible="detailed_type!='service'" required="detailed_type=='service'"/>
+                           invisible="type!='service'" required="type=='service'"/>
                 </xpath>
 
                 <!-- 2. Replace the Stat Button Box -->
@@ -194,7 +194,7 @@
 
                 <!-- 8. Add new Notebook Pages -->
                 <xpath expr="//notebook" position="inside">
-                    <page name="fields_isp" string="Datos ISP" invisible="(not is_internet) or (detailed_type != 'service')">
+                    <page name="fields_isp" string="Datos ISP" invisible="(not is_internet) or (type != 'service')">
 
 
                             <group string="Ancho de Banda Descarga/Subida">
