--- a/silver_product/views/product_view.xml
+++ b/silver_product/views/product_view.xml
@@ -27,11 +27,11 @@
                               <group>
                                   <!--field name="tracking"/>
                                   <field name="type"/-->
-                    <field name="detailed_type"/>
-                                <field name="uom_id"  invisible="detailed_type=='service'"/>
-                                <field name="etype" invisible="detailed_type=='service'"/>
-                                  <label for="brand_id" invisible="detailed_type=='service'"/>
-                    <div class="o_row d-flex align-items-center" invisible="detailed_type=='service'">
+                    <field name="type"/>
+                                <field name="uom_id"  invisible="type=='service'"/>
+                                <field name="etype" invisible="type=='service'"/>
+                                  <label for="brand_id" invisible="type=='service'"/>
+                    <div class="o_row d-flex align-items-center" invisible="type=='service'">
                         <field name="brand_id"  nolabel="1"/>
                         <field name="brand_logo" widget="image" class="ms-2" style="width: 24px; height: 24px;" invisible="not brand_id"/>
                     </div>
@@ -56,11 +56,11 @@
                         </group>
                     </page>
                 </xpath>
-                                <xpath expr="//field[@name='detailed_type']" position="after">
+                                <xpath expr="//field[@name='type']" position="after">
                                     <field name="is_internet" invisible="1"/>
                     <field name="service_type_id"
                            options="{'no_create_edit': True, 'no_quick_create': True}"
-                           invisible="detailed_type!='service'" required="detailed_type=='service'"/>
+                           invisible="type!='service'" required="type=='service'"/>
                 </xpath>
 
 
@@ -85,11 +85,11 @@
                             <group>
                                                                   <!--field name="tracking"/>
                                   <field name="type"/-->
-                    <field name="detailed_type"/>
-                                <field name="uom_id"  invisible="detailed_type=='service'"/>
-                                <field name="etype" invisible="detailed_type=='service'"/>
-                                  <label for="brand_id" invisible="detailed_type=='service'"/>
-                    <div class="o_row d-flex align-items-center" invisible="detailed_type=='service'">
+                    <field name="type"/>
+                                <field name="uom_id"  invisible="type=='service'"/>
+                                <field name="etype" invisible="type=='service'"/>
+                                  <label for="brand_id" invisible="type=='service'"/>
+                    <div class="o_row d-flex align-items-center" invisible="type=='service'">
                         <field name="brand_id"  nolabel="1"/>
                         <field name="brand_logo" widget="image" class="ms-2" style="width: 24px; height: 24px;" invisible="not brand_id"/>
                     </div>
@@ -121,11 +121,11 @@
                 </xpath>
 
 
-                                <xpath expr="//field[@name='detailed_type']" position="after">
+                                <xpath expr="//field[@name='type']" position="after">
                                     <field name="is_internet" invisible="1"/>
                     <field name="service_type_id"
                            options="{'no_create_edit': True, 'no_quick_create': True}"
-                           invisible="detailed_type!='service'" required="detailed_type=='service'"/>
+                           invisible="type!='service'" required="type=='service'"/>
                 </xpath>
 
                 <!-- 2. Replace the Stat Button Box -->
@@ -201,7 +201,7 @@
 
                 <!-- 8. Add new Notebook Pages -->
                 <xpath expr="//notebook" position="inside">
-                    <page name="fields_isp" string="Datos ISP" invisible="(not is_internet) or (detailed_type != 'service')">
+                    <page name="fields_isp" string="Datos ISP" invisible="(not is_internet) or (type != 'service')">
 
 
                             <group string="Ancho de Banda Descarga/Subida">
