--- a/silver_crm/views/crm_lead_views.xml
+++ b/silver_crm/views/crm_lead_views.xml
@@ -52,7 +52,7 @@
         </record>
 
         <!-- Herencia para la vista Kanban (botón en la tarjeta) -->
-        <record id="crm_lead_view_kanban_inherit_silver" model="ir.ui.view">
+        <!--record id="crm_lead_view_kanban_inherit_silver" model="ir.ui.view">
             <field name="name">crm.lead.kanban.inherit.silver</field>
             <field name="model">crm.lead</field>
             <field name="inherit_id" ref="crm.crm_case_kanban_view_leads"/>
@@ -64,6 +64,6 @@
                     </div>
                 </xpath>
             </field>
-        </record>
+        </record-->
     </data>
 </odoo>
